# ecosystem-simulation

./: .gitignore  CMakeLists.txt  README.md  config.ini
include/: Animal.hpp  Cell.hpp  Config.hpp  ConsoleRenderer.hpp  Entity.hpp  Grid.hpp  Herbivore.hpp  Obstacle.hpp  Plant.hpp  Predator.hpp  Renderer.hpp  SimulationEngine.hpp  StatisticsCollector.hpp  Types.hpp
src/: Animal.cpp  Cell.cpp  Config.cpp  ConsoleRenderer.cpp  Entity.cpp  Grid.cpp  Herbivore.cpp  Obstacle.cpp  Plant.cpp  Predator.cpp  Renderer.cpp  SimulationEngine.cpp  StatisticsCollector.cpp  main.cpp
